Style landing page, onto working out search logic.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div id="app-container">
+      <div id="nav-main">
+        <div id="brand">Medical Job Board</div>
+      </div>
+      <%= yield %>
+    </div>
+    
   </body>
 </html>
