--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -3,6 +3,6 @@
     <div class="panel-heading">
       <h1 class="panel-title"><%="#{@job.specialty} Opening In #{@job.city}, #{@job.state}"%></h1>
     </div>
-    <div class="panel-body"><%=@job.job_description%></div>
+    <div class="panel-body"><%=@job.job_description_markup%></div>
   </div>
 </div>
