On my way. Need input.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <div id="app-container">
       <div id="nav-main">
-        <div id="brand">Medical Job Board</div>
+        <div id="brand"><%=link_to "Medical Job Board", "/"%></div>
       </div>
       <%= yield %>
     </div>
