--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="form-group">
-          <input type="text" name="job[keywords]" placeholder="Keywords (ex. 'salary', 'robotics', etc.)" class="form-control">
+          <input type="text" name="job[keywords]" placeholder="Subspecialties/Keywords" class="form-control">
         </div>
         <div class="form-group">
           <input class="btn" type="submit" value="Search">
