--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -21,9 +21,7 @@
           </select>
         </div>
         <div class="form-group">
-          <select name="job[city]" class="form-control">
-              <option value="">City</option>
-          </select>
+          <input type="text" name="job[city]" placeholder="City" class="form-control">
         </div>
         <h4>Visas</h4>
         <div class="form-group visas-radio">
@@ -38,7 +36,7 @@
           </div>
         </div>
         <div class="form-group">
-          <input type="text" name="job[keywords]" placeholder="Subspecialties/Keywords" class="form-control">
+          <input type="text" name="job[subspecialty_keywords]" placeholder="Subspecialties/Keywords" class="form-control">
         </div>
         <div class="form-group">
           <input class="btn" type="submit" value="Search">
