--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,5 @@
 <div id="landing-page">
+  <div id="tagline">Advance practice medical jobs nationwide.</div>
   <div class="job-search-form">
     <h3>Search Jobs</h3>
     <div>
