Source specialty dropdown from Specialty names. Sort job index by state asc. Expand search: %Cardiology% not Cardiology%

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,7 +7,7 @@
         <div class="form-group">
           <select name="job[specialty]" class="form-control">
               <option value="">Specialty</option>
-            <%=specialties.each do |specialty|%>
+            <%=@specialties.each do |specialty|%>
               <option value="<%=specialty%>"><%=specialty%></option>
             <%end%>
           </select>
