Change name of site to match domain.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MedicalJobBoard</title>
+    <title>AllPhysicianCareers</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -11,7 +11,7 @@
   <body>
     <div id="app-container">
       <div id="nav-main">
-        <div id="brand"><%=link_to "Medical Job Board", "/"%></div>
+        <div id="brand"><%=link_to "AllPhysicianCareers", "/"%></div>
       </div>
       <%= yield %>
     </div>
