--- a/app/assets/stylesheets/main/landing_page.css
+++ b/app/assets/stylesheets/main/landing_page.css
@@ -34,4 +34,11 @@
 .job-search-form input[type='submit']{
   display: block;
   margin: 0 auto;
+  border: solid #c0c0c0 .1em;
+}
+
+.job-search-form input[type='submit']:hover{
+  background-color: #dda864;
+  color: white;
+  border-color: #eac79d;
 }
