--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,15 +3,15 @@
   <head>
     <title>AllPhysicianCareers</title>
     <%= csrf_meta_tags %>
-
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:800|Jaldi:700" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <div id="app-container">
-      <div id="nav-main">
-        <div id="brand"><%=link_to "AllPhysicianCareers", "/"%></div>
+      <div id="nav-main" class="ocean-breeze">
+        <div id="brand"><%=link_to("AllPhysicianCareers", "/")%> <%=fa_icon("heartbeat")%></div>
       </div>
       <%= yield %>
     </div>
