--- a/app/views/jobs/_application_form.html.erb
+++ b/app/views/jobs/_application_form.html.erb
@@ -1,3 +1,89 @@
-<form>
-  
+<form id="apply-register-form" method="POST" action="/applicants">
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">Account Info</h4> 
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="text" name="" class="form-control" placeholder="Email" required>
+        </div>
+      </div>
+      <div class="col-md-6">
+      
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="password" name="" class="form-control" placeholder="Password" required>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="password" name="" class="form-control" placeholder="Confirm Password" required>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <select name="" class="form-control" required>
+              <option value="">Specialty</option>
+            <%=Specialty.pluck(:name).sort.each do |specialty|%>
+              <option value="<%=specialty%>"><%=specialty%></option>
+            <%end%>
+          </select>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="text" name="" class="form-control" placeholder="State Preference">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Contact Info</h3>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="text" name="" class="form-control" placeholder="First Name">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="text" name="" class="form-control" placeholder="Last Name">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="text" name="" class="form-control" placeholder="TBD">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <input type="text" name="" class="form-control" placeholder="TBD">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <button type="submit" class="btn btn-primary submit-application-btn">Apply</button>
+  </div>
 </form>
+
+
+
+
+  
+  
+  
+  
+  
