--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%=favicon_link_tag "favicon2.ico"%>
     <title>AllPhysicianCareers</title>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Catamaran:800|Jaldi:700" rel="stylesheet">
