--- a/app/views/jobs/_application_form.html.erb
+++ b/app/views/jobs/_application_form.html.erb
@@ -1,4 +1,4 @@
-<%=form_tag({action: :poop, controller: :applications}, multipart: true) do%>
+<%=form_tag({action: :create, controller: :applications}, multipart: true) do%>
 <!-- <form enctype='multipart/form-data' id="apply-register-form" method="POST" action="/applications"> -->
 
   <div class="panel panel-default">
@@ -9,24 +9,24 @@
       <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <input type="text" name="" class="form-control" placeholder="First Name" required>
+          <input type="text" name="application[first_name]" class="form-control" placeholder="First Name" required>
         </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
-          <input type="text" name="" class="form-control" placeholder="Last Name" required>
+          <input type="text" name="application[last_name]" class="form-control" placeholder="Last Name" required>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <input type="text" name="" class="form-control" placeholder="Email" required>
+          <input type="text" name="application[email]" class="form-control" placeholder="Email" required>
         </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
-          <select name="" class="form-control" required>
+          <select name="application[specialty]" class="form-control" required>
               <option value="">Specialty</option>
             <%=Specialty.pluck(:name).sort.each do |specialty|%>
               <option value="<%=specialty%>"><%=specialty%></option>
@@ -38,12 +38,12 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <input type="text" name="" class="form-control" placeholder="Location Preference">
+          <input type="text" name="application[location_preference]" class="form-control" placeholder="Location Preference">
         </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
-          <%=file_field_tag "CV"%>
+          <%=file_field_tag "CV", name: "application[cv]"%>
         </div>
       </div>
     </div>
