--- a/app/views/jobs/_application_form.html.erb
+++ b/app/views/jobs/_application_form.html.erb
@@ -1,59 +1,72 @@
 <%=form_tag({action: :create, controller: :applications}, multipart: true) do%>
-<!-- <form enctype='multipart/form-data' id="apply-register-form" method="POST" action="/applications"> -->
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title">Account Info</h4> 
+      <h4 class="panel-title">Candidate Information</h4> 
     </div>
     <div class="panel-body">
       <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <input type="text" name="application[first_name]" class="form-control" placeholder="First Name" required>
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" name="application[first_name]" class="form-control" placeholder="First Name" required>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" name="application[last_name]" class="form-control" placeholder="Last Name" required>
+          </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="form-group">
-          <input type="text" name="application[last_name]" class="form-control" placeholder="Last Name" required>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" name="application[email]" class="form-control" placeholder="Email" required>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <select name="application[specialty]" class="form-control" required>
+                <option value="">Specialty</option>
+              <%=Specialty.pluck(:name).sort.each do |specialty|%>
+                <option value="<%=specialty%>"><%=specialty%></option>
+              <%end%>
+            </select>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <input type="text" name="application[email]" class="form-control" placeholder="Email" required>
+      <div class="row">
+        <div class="col-md-6">
+          <h6>Visa Requirements</h6>
+          <div class="form-group">
+            <input type="radio" name="application[visa_requirements]" value="" checked>
+            <label>None</label>
+            <input type="radio" name="application[visa_requirements]" value="H1">
+            <label>H1</label>
+            <input type="radio" name="application[visa_requirements]" value="J1">
+            <label>J1</label>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <input type="text" name="application[location_preference]" class="form-control" placeholder="Location Preference">
+          </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="form-group">
-          <select name="application[specialty]" class="form-control" required>
-              <option value="">Specialty</option>
-            <%=Specialty.pluck(:name).sort.each do |specialty|%>
-              <option value="<%=specialty%>"><%=specialty%></option>
-            <%end%>
-          </select>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Upload Your CV</label>
+            <%=file_field_tag "CV", name: "application[cv]"%>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <input type="text" name="application[location_preference]" class="form-control" placeholder="Location Preference">
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="form-group">
-          <%=file_field_tag "CV", name: "application[cv]"%>
-        </div>
-      </div>
-    </div>
     </div>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
     <button type="submit" class="btn btn-primary submit-application-btn">Apply</button>
   </div>
-<!-- </form> -->
+
 <%end%>
 
 
