Make nav main fixed and put the main content into a container:

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,10 @@
       <%elsif notice%>
         <aside class="alert alert-info" id="notice"><%= notice %></aside>
       <%end%>
-      <%= yield %>
+      <div id="main-content-container">
+        <%= yield %>
+      </div>
+      
     </div>
     
   </body>
