--- a/app/assets/stylesheets/main/index.scss
+++ b/app/assets/stylesheets/main/index.scss
@@ -24,6 +24,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 5%;
 
   #tagline {
     font-style: italic;
@@ -42,6 +43,9 @@
 
 #nav-main {
   color: white;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
 }
 
 .job-search-form {
