Working on email notification for new job application. Associated job with application.

--- a/app/views/jobs/_application_form.html.erb
+++ b/app/views/jobs/_application_form.html.erb
@@ -1,5 +1,5 @@
 <%=form_tag({action: :create, controller: :applications}, multipart: true) do%>
-
+  <%=hidden_field_tag "application[job_id]", @job.id%>
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">Candidate Information</h4> 
