--- a/app/views/jobs/_application_form.html.erb
+++ b/app/views/jobs/_application_form.html.erb
@@ -38,7 +38,7 @@
         <div class="col-md-6">
           <h6>Visa Requirements</h6>
           <div class="form-group">
-            <input type="radio" name="application[visa_requirements]" value="" checked>
+            <input type="radio" name="application[visa_requirements]" value="None" checked>
             <label>None</label>
             <input type="radio" name="application[visa_requirements]" value="H1">
             <label>H1</label>
