Fix job_aid error

--- a/app/views/job_application_notice/new_application_notice.html.erb
+++ b/app/views/job_application_notice/new_application_notice.html.erb
@@ -12,7 +12,7 @@
   <h5>Specialty:</h5>
   <p><%=@application.specialty%></p>
   <h5>Job Id:</h5>
-  <p><%=@application.job_aid%></p>
+  <p><%=@application.aid%></p>
   <h5>Visa Requirements:</h5>
   <p><%=@application.visa_requirements%></p>
   <h5>Location Preference:</h5>
