Job application notification basically working.

--- a/app/views/job_application_notice/new_application_notice.html.erb
+++ b/app/views/job_application_notice/new_application_notice.html.erb
@@ -13,6 +13,10 @@
   <p><%=@application.specialty%></p>
   <h5>Job Id:</h5>
   <p><%=@job.aid%></p>
+  <h5>Job City:</h5>
+  <p><%=@job.city%></p>
+  <h5>Job State</h5>
+  <p><%=@job.state%></p>
   <h5>Visa Requirements:</h5>
   <p><%=@application.visa_requirements%></p>
   <h5>Location Preference:</h5>
