--- a/app/views/jobs/_application_form.html.erb
+++ b/app/views/jobs/_application_form.html.erb
@@ -1,4 +1,4 @@
-<%=form_tag({action: :create, controller: :applications}, multipart: true) do%>
+<%=form_tag({action: :create, controller: :applications}, multipart: true, id: "new-job-application") do%>
   <%=hidden_field_tag "application[job_id]", @job.id%>
   <div class="panel panel-default">
     <div class="panel-heading">
@@ -48,7 +48,8 @@
         </div>
         <div class="col-md-6">
           <div class="form-group">
-            <input type="text" name="application[location_preference]" class="form-control" placeholder="Location Preference">
+            <input id="job-application-location-preference" type="text" name="application[location_preference]" class="form-control" placeholder="Location Preference">
+            <div>Ex. CA, IL, GA</div>
           </div>
         </div>
       </div>
@@ -63,6 +64,12 @@
     </div>
   </div>
   <div class="modal-footer">
+    <div class="collapse" id="termsOfUse">
+      <div class="well">
+          <%=render "shared/terms_of_use"%>
+      </div>
+    </div>
+    <aside id="application-footer-terms-of-use">By applying to this job you agree to our <a role="button" data-toggle="collapse" href="#termsOfUse" aria-expanded="false" aria-controls="termsOfUse">Terms of Use</a>.</aside>
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
     <button type="submit" class="btn btn-primary submit-application-btn">Apply</button>
   </div>
