About and contact routes and pages created.

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -53,3 +53,28 @@ thead {
   height: 100%;
   padding-top: 6%;
 }
+
+a {
+  color: white;
+  text-decoration: none;
+
+  &:hover{ 
+    color: white;
+    text-decoration: none;
+  }
+
+  &:active{ 
+    color: white;
+    text-decoration: none;
+  }
+
+  &:focus{ 
+    color: white;
+    text-decoration: none;
+  }
+
+  &:visited{ 
+    color: white;
+    text-decoration: none;
+  }
+}
