--- a/app/assets/stylesheets/main/index.scss
+++ b/app/assets/stylesheets/main/index.scss
@@ -3,8 +3,9 @@
   display: inline-block;
   padding: 1%;
   font-size: 2.4em;
-  font-weight: 100;
+  font-weight: 700;
   font-family: 'Jaldi', sans-serif;
+  margin-right: 15px;
 
   a{
     color: white;
@@ -46,6 +47,13 @@
   position: fixed;
   width: 100%;
   z-index: 1000;
+
+  .nav-main-links{
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 1.4em;
+    margin-right: 23px;
+
+  }
 }
 
 .job-search-form {
