--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -9,6 +9,8 @@
         <td>City</td>
         <td>State</td>
         <td>Visas</td>
+        <td>Distance To Metro</td>
+        <td>Additional Info</td>
       </tr>
     </thead>
     <%@jobs.each_with_index do |job, i|%>
@@ -18,6 +20,8 @@
         <td><%=job.city%></td>
         <td><%=job.state%></td>
         <td><%=job.visas%></td>
+        <td><%=job.distance_to_metro%></td>
+        <td><%=job.subspecialty_keywords%></td>
       </tr>
     <%end%>
   </table>
