Change contact info to modal instead of route and separate page.

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -54,7 +54,8 @@ thead {
   padding-top: 6%;
 }
 
-a {
+#nav-main{
+  a {
   color: white;
   text-decoration: none;
 
@@ -78,3 +79,5 @@ a {
     text-decoration: none;
   }
 }
+}
+
