--- a/app/assets/stylesheets/main/contact.scss
+++ b/app/assets/stylesheets/main/contact.scss
@@ -1,9 +1,11 @@
 #contact-information-container {
+  padding: 40px;
   h3{
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 3.4em;
     text-align: center;
     letter-spacing: 5px;
+    text-decoration: underline;
   }
   h4 {
     font-size: 2em;
@@ -15,7 +17,7 @@
   }
 
   #contact-email-address{
-    margin-top: 85px;
+    margin-top: 40px;
     text-align: center;
     margin-bottom: 50px;
 
