Add comments to application, change visa_requirements to citizenship and stylize cv file input.

--- a/app/views/job_application_notice/new_application_notice.html.erb
+++ b/app/views/job_application_notice/new_application_notice.html.erb
@@ -17,10 +17,12 @@
   <div style="text-align: center"><%=@job.city%></div>
   <h3 style="text-align: center">Job State</h3>
   <div style="text-align: center"><%=@job.state%></div>
-  <h3 style="text-align: center">Visa Requirements:</h3>
-  <div style="text-align: center"><%=@application.visa_requirements%></div>
+  <h3 style="text-align: center">Citizenship:</h3>
+  <div style="text-align: center"><%=@application.citizenship%></div>
   <h3 style="text-align: center">Location Preference:</h3>
   <div style="text-align: center"><%=@application.location_preference%></div>
+  <h3 style="text-align: center">Comments:</h3>
+  <div style="text-align: center"><%=@application.comments%></div>
   <h4>If the candidate uploaded a CV, it is attached below!</h4>
 
 </body>
