--- a/app/assets/stylesheets/applications/new.scss
+++ b/app/assets/stylesheets/applications/new.scss
@@ -3,4 +3,36 @@
     display: inline;
     margin-right: 20px;
   }
+  textarea{
+    resize: none;
+  }
+
+  #new-application-cv-input{
+
+    text-align: center;
+    h4{
+      font-weight: 200;
+      text-decoration: underline;
+    }
+
+    .fa-cloud-upload{
+      font-size: 4em;
+      cursor: pointer;
+      margin-top: 10px;
+
+      &:hover{
+        color: #CE5A57
+      }
+    }
+
+    input#CV{
+      width: 0.1px;
+      height: 0.1px;
+      opacity: 0;
+      overflow: hidden;
+      position: absolute;
+      z-index: -1;
+    }
+  }
+
 }
