--- a/app/views/jobs/_application.html.erb
+++ b/app/views/jobs/_application.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel"><%="Application For #{@job.specialty} in #{@job.city}, #{@job.state}"%></h4>
+        <h4 class="modal-title" id="myModalLabel"><%="Application For #{@job.specialty} Position in #{@job.city}, #{@job.state}"%></h4>
       </div>
       <div class="modal-body">
         <%=render "application_form"%>
