--- a/app/views/jobs/_application_form.html.erb
+++ b/app/views/jobs/_application_form.html.erb
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
-            <input type="text" name="application[email]" class="form-control" placeholder="Email" required>
+            <input type="email" name="application[email]" class="form-control" placeholder="Email" required>
           </div>
         </div>
         <div class="col-md-6">
