Notice email works for applicants and recruiters. Banner included in both.

--- a/app/views/job_application_notice/recruiter_notice.html.erb
+++ b/app/views/job_application_notice/recruiter_notice.html.erb
@@ -4,6 +4,7 @@
   <title></title>
 </head>
 <body>
+  <img width="100%" src="https://s3.us-east-2.amazonaws.com/allphysiciancareers/images/apc_email_header.png">
   <div style="text-align: center">A candidate applied to one of your jobs on AllPhysicianCareers.com!</div>
   <h3 style="text-align: center">Name:</h3>
   <div style="text-align: center"><%="#{@application.first_name} #{@application.last_name}"%></div>
