Fix index display issue.

--- a/app/assets/stylesheets/main/index.scss
+++ b/app/assets/stylesheets/main/index.scss
@@ -32,7 +32,8 @@
     font-weight: 200;
     font-size: 1.7em;
     position: relative;
-    top: -17%
+    top: -17%;
+    margin-bottom: 40px;
   }
 } 
 
