Sort by for job search results using ajax.

--- a/app/assets/stylesheets/jobs/index.scss
+++ b/app/assets/stylesheets/jobs/index.scss
@@ -5,3 +5,11 @@
 .paginator-container {
   text-align: center;
 }
+
+#job-index-sort-select{
+  width: 200px;
+  display: block;
+  margin: 0 auto;
+  font-size: 1.2em;
+  font-family: 'Jaldi', sans-serif;
+}
