Restyle contact section.

--- a/app/assets/stylesheets/main/contact.scss
+++ b/app/assets/stylesheets/main/contact.scss
@@ -1,45 +1,29 @@
 #contact-information-container {
-  padding: 40px;
-  h3{
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 3.4em;
+  font-family: 'Jaldi', sans-serif;
+  text-align: center;
+  .modal-header{
+    font-size: 2.6em;
+    font-weight: 400;
     text-align: center;
-    letter-spacing: 5px;
-    text-decoration: underline;
-  }
-  h4 {
-    font-size: 2em;
-    font-family: 'Open Sans Condensed', sans-serif;
-    text-align: center;
-    letter-spacing: 5px;
-    font-weight: 300;
-    text-decoration: underline;
+    opacity: .6;
   }
 
-  #contact-email-address{
-    margin-top: 40px;
-    text-align: center;
-    margin-bottom: 50px;
-
-    p {
-      font-family: 'Open Sans Condensed', sans-serif;
-      font-size: 1.3em;
-    }
-
-    div {
-      font-family: 'Open Sans Condensed', sans-serif;
-      font-size: 1.3em;
-      white-space: pre-wrap;
-    }
+  .contact-headings{
+    font-size: 2.2em;
+    font-style: italic;
+    font-weight: 700;
   }
 
-  #contact-mailing-address{
-    div {
-      text-align: center;
-      white-space: pre-line;
-      font-family: 'Open Sans Condensed', sans-serif;
-      font-size: 1.3em;
-    }
+  p{
+    margin-bottom: 0;
+  }
+
+  p, a{
+    font-size: 1.3em;
+  }
+
+  .modal-body{
+    padding-bottom: 40px;
   }
   
 }
