--- a/app/views/main/_contact.html.erb
+++ b/app/views/main/_contact.html.erb
@@ -1,17 +1,13 @@
-<div class="modal fade" tabindex="-1" role="dialog" id="contactInformationModal" >
-  <div class="modal-dialog modal-lg">
+<div id="contactInformationModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="contactInformationModal">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content" id="contact-information-container">
-      <h3>Contact Info</h3>
-      <div id="contact-email-address">
-        <h4>Email</h4>
-        <div><a href="mailto:info@allphysiciancareers.com">info@allphysiciancareers.com</a></div>
-      </div>
-      <div id="contact-mailing-address">
-        <h4>Mailing Address</h4>
-        <div>AllPhysicianCareers
-          340 N. Emerson
-          Indianapolis, IN 46219
-        </div>
+      <div class="modal-header">Contact AllPhysicianCareers.com</div>
+      <div class="modal-body">
+        <h3 class="contact-headings">Email</h3>
+        <a href="mailto:info@archwayrecruiters.com">info@archwayrecruiters.com</a>
+        <h3 class="contact-headings">Mail</h3>
+        <p>340 N. Emerson</p>
+        <p>Indianapolis, IN 46219</p>
       </div>
     </div>
   </div>
