Remove accidental string column and add phone number column to applications table. Small cosmetic edit to terms of service.

--- a/app/views/shared/_terms_of_use.html.erb
+++ b/app/views/shared/_terms_of_use.html.erb
@@ -1,5 +1,5 @@
 <div id="terms-of-use">
-  <h4>Welcome to our AllPhysicianCareers!</h4>
+  <h4>Welcome to AllPhysicianCareers!</h4>
 
   <p>
     We appreciate your use of our services to aid you in finding the right healthcare position.  Below are our Terms of Use.  In order to use this site   and/or to apply for positions through this site, you will first need to agree to our terms of use.  You must read our Terms of Use prior to using   this site.   These terms are legally binding conditions set forth when you use this site.  It is our goal that we help you find the perfect job and   in the process, we require that you also follow our guidelines.
@@ -34,26 +34,3 @@
     <li>AllPhysicianCareers may share your information with Employers, Agencies or other 3rd parties that can assist you.</li>
   </ul>
 </div>
-
-
-
- 
-
-
-<!-- 
-
-
-By creating a profile, you agree to:
- - Allow Job Board to contact you as needed regarding your profile
- - Allow Job Board  to make available your information to 3rd parties
- - Allow Candidates to contact you via Job Board regarding your job openings
-
-Candidates: 
-As a candidate using Job Board, you are not required to create an account.  Prior to creating an account, you may access, search and view job openings.  
-
-If you wish to apply for a position or positions via Job Board, you will be required to create an account. 
-By creating an account with Job Board, you agree that: 
- - Job Board may contact you regarding your profile and job search.
- - The information shared is honest & accurate.
- - Employers may contact you regarding potential job openings that fit your profile.
- - Job Board  may share your information with Employers, Agencies or other 3rd parties that can assist you. -->
