--- a/app/views/jobs/_application_form.html.erb
+++ b/app/views/jobs/_application_form.html.erb
@@ -25,12 +25,7 @@
         </div>
         <div class="col-md-6">
           <div class="form-group">
-            <select name="application[specialty]" class="form-control" required>
-                <option value="">Specialty</option>
-              <%=Specialty.pluck(:name).sort.each do |specialty|%>
-                <option value="<%=specialty%>"><%=specialty%></option>
-              <%end%>
-            </select>
+            <input type="tel" name="application[phone_number]" class="form-control" placeholder="Phone Number">
           </div>
         </div>
       </div>
@@ -50,6 +45,18 @@
         <div class="col-md-6">
           <div class="form-group">
             <input id="job-application-location-preference" type="text" name="application[location_preference]" class="form-control" placeholder="Location Preference e.g. CA, IL, GA">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <div class="form-group">
+            <select name="application[specialty]" class="form-control" required>
+                <option value="">Specialty</option>
+              <%=Specialty.pluck(:name).sort.each do |specialty|%>
+                <option value="<%=specialty%>"><%=specialty%></option>
+              <%end%>
+            </select>
           </div>
         </div>
       </div>
