Change query for pulling all Advanced Practice jobs.

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -9,7 +9,7 @@
               <option value="">Specialty</option>
             <%=@specialties.each do |specialty|%>
               <%if specialty == "Advanced Practice - ALL"%>
-                <option value="Advanced Practice%"><%=specialty%></option>
+                <option value="%Advanced Practice%"><%=specialty%></option>
               <%else%>
                 <option value="<%=specialty%>"><%=specialty%></option>
               <%end%>
