Fix typo in tagline.

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
 <div id="landing-page">
-  <div id="tagline">Physician & Advance Practice jobs nationwide.</div>
+  <div id="tagline">Physician & Advanced Practice jobs nationwide.</div>
   <div class="job-search-form">
     <h3>Search Jobs</h3>
     <div>
