--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div id="nav-main" class="ocean-breeze">
         <div id="brand"><%=link_to("AllPhysicianCareers", "/")%> <%=fa_icon("heartbeat")%></div>
         <a class="nav-main-links" href="/">Search</a>
-        <a role="button" class="nav-main-links" type="button" data-toggle="modal" data-target="#contactInformationModal">Contact</a>
+        <a class="nav-main-links" data-toggle="modal" data-target="#contactInformationModal">Contact</a>
         <!-- <a class="nav-main-links" href="/about">About</a> -->
       </div>
       <div id="main-content-container">
