More tweaks to accomodate BS4

--- a/app/views/main/_contact.html.erb
+++ b/app/views/main/_contact.html.erb
@@ -1,7 +1,9 @@
 <div id="contactInformationModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="contactInformationModal">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content" id="contact-information-container">
-      <div class="modal-header">Contact AllPhysicianCareers.com</div>
+      <div class="modal-header">
+        <div class="modal-title">Contact AllPhysicianCareers.com</div>
+      </div>
       <div class="modal-body">
         <h3 class="contact-headings">Email</h3>
         <a href="mailto:info@archwayrecruiters.com">info@archwayrecruiters.com</a>
