--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <div id="brand"><%=link_to("AllPhysicianCareers", "/")%> <%=fa_icon("heartbeat")%></div>
         <a class="nav-main-links" href="/">Search</a>
         <a class="nav-main-links" data-toggle="modal" data-target="#contactInformationModal">Contact</a>
+        <a class="nav-main-links" href="/">Sign In</a>
         <!-- <a class="nav-main-links" href="/about">About</a> -->
       </div>
       <div id="main-content-container">
